[gd_scene load_steps=2 format=3 uid="uid://dbnylkp3wrhws"]

[ext_resource type="Script" uid="uid://d3ykhtvm8chve" path="res://end_screen.gd" id="1_my301"]

[node name="EndScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_my301")

[node name="Score" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="HighScore" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="RestartButton" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="MainMenuButton" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_main_menu_button_pressed"]
